feat: build API get all features and get all categories
