# src/models/repo/category.repo.js
@@ -1,0 +1,11 @@
+const db = require('..')
+
+const getAllCategories = async () => {
+    return db.Categories.findAll({
+        attributes: ['categoryId', 'name']
+    })
+}
+
+module.exports = {
+    getAllCategories
+}
