# src/models/repo/index.js
@@ -3,3 +3,5 @@ module.exports.userRepo = require('./user.repo')
 module.exports.tokenRepo = require('./token.repo')
 module.exports.locationRepo = require('./location.repo')
 module.exports.imageRepo = require('./image.repo')
+module.exports.categoryRepo = require('./category.repo')
+module.exports.featureRepo = require('./feature.repo')
